syntax = "proto3";
package userPreferences;
import "common.proto";

option go_package = "food/userPreferences";
option java_package = "com.proto.userPreferences";
option java_multiple_files = true;
option csharp_namespace = "UserPreferences";

message UserPreferencesRequest {
  string userid = 1;
  common.Food food = 2;
}
message UserPreferencesResponse {
  common.Food food  = 1;
}

service UserPreferencesService {
  rpc getShortlistedFoods(stream UserPreferencesRequest) returns (stream UserPreferencesResponse) {};
}